  TEZ-1313. Setup pre-commit build to test submitted patches.
  TEZ-1856. Remove LocalOnFileSortedOutput, LocalMergedInput, LocalTaskOutputFiles.
  TEZ-1949. Whitelist TEZ_RUNTIME_OPTIMIZE_SHARED_FETCH for broadcast edges.
  TEZ-1593. Refactor PipelinedSorter to remove all MMAP based ByteBuffer references.

Release 0.6.2: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2548. TezClient submitDAG can hang if the AM is in the process of shutting down.
  TEZ-2534. Error handling summary event when shutting down AM.
  TEZ-2511. Add exitCode to diagnostics when container fails.
  TEZ-2489. Disable warn log for Timeline ACL error when tez.allow.disabled.timeline-domains set to true.
  TEZ-2509. YarnTaskSchedulerService should not try to allocate containers if AM is shutting down.
  TEZ-2483. Tez should close task if processor fail

Release 0.6.1: 2015-05-18

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2437. FilterLinesByWord NPEs when run in Localmode
  TEZ-2057. tez-dag/pom.xml contains versions for dependencies.
  TEZ-2282. Delimit reused yarn container logs (stderr, stdout, syslog) with task attempt start/stop events
  TEZ-2396. pig-tez-tfile-parser pom is hard coded to depend on 0.6.0-SNAPSHOT version.
  TEZ-2237. Valid events should be sent out when an Output is not started.
  TEZ-1988. Tez UI: does not work when using file:// in a browser
  TEZ-2390. tez-tools swimlane tool fails to parse large jobs >8K containers
  TEZ-2256. Avoid use of BufferTooSmallException to signal end of buffer in UnorderedPartitionedKVWriter
  TEZ-2380. Disable fall back to reading from timeline if timeline disabled.
  TEZ-2226. Disable writing history to timeline if domain creation fails.
  TEZ-2259. Push additional data to Timeline for Recovery for better consumption in UI.
  TEZ-2365. Update tez-ui war's license/notice to reflect OFL license correctly.
  TEZ-2329. UI Query on final dag status performance improvement
  TEZ-2287. Deprecate VertexManagerPluginContext.getTaskContainer().