@@ -54,7 +54,7 @@ public class ContainerReporter extends CallableWithNdc<ContainerTask> {
   @Override
   protected ContainerTask callInternal() throws Exception {
     ContainerTask containerTask = null;
-    LOG.info("Attempting to fetch new task");
+    LOG.info("Attempting to fetch new task for container {}", containerContext.getContainerIdentifier());
     containerTask = umbilical.getTask(containerContext);
     long getTaskPollStartTime = System.currentTimeMillis();
     nextGetTaskPrintTime = getTaskPollStartTime + LOG_INTERVAL;
@@ -64,7 +64,7 @@ public class ContainerReporter extends CallableWithNdc<ContainerTask> {
       TimeUnit.MILLISECONDS.sleep(sleepTimeMilliSecs);
       containerTask = umbilical.getTask(containerContext);
     }
-    LOG.info("Got TaskUpdate: "
+    LOG.info("Got TaskUpdate for containerId= " + containerContext.getContainerIdentifier() + ": "
         + (System.currentTimeMillis() - getTaskPollStartTime)
         + " ms after starting to poll."
         + " TaskInfo: shouldDie: "
